--- a/src/ui/static/index.html
+++ b/src/ui/static/index.html
@@ -10,7 +10,6 @@
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <style>
   body {
-    padding-top: 50px;
     padding-bottom: 20px;
   }
   </style>
@@ -20,19 +19,39 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-sm-3">
+      <div class="col-md-6">
+        
+        <h1>Automatic Dating of Documents</h1>
+        <p>In our Digital Humanities project, we have been given 200 years of digitized articles from newspapers Journal de Genève (JDG) and Gazette de Lausanne (GDL). Our goal was to investigate methods that can estimate the date of given text using the dataset. This site provide a small demo to present some of the results.</p>
+
+        <p>We have also gather some statistics about the cleaning of the dataset. This information can be found here: <a href="/about_dataset">About dataset</a></p>
+      </div>
+
+      <div class="col-md-6 links">
+        <h4>Valuable links:</h4>
+        <ul>
+          <li><a href="http://veniceatlas.epfl.ch/automatic-dating-of-documents-progress-report-1/">Automatic Dating of documents – Progress Report 1</a></li>
+          <li><a href="http://veniceatlas.epfl.ch/automatic-dating-of-documents-progress-report-2/">Automatic Dating of Documents – Progress Report 2</a></li>
+          <li><a href="http://veniceatlas.epfl.ch/automatic-dating-of-documents-progress-report-3/">Automatic Dating of Documents – Progress Report 3</a></li>
+          <li><a href="/static/documents/automatic-dating-documents.pdf">Final poster in project</a></li>
+
+        </ul>
+      </div>
+    </div>
+   
+    <div class="row">
+      <div class="col-md-4">
         <h2>Input</h2>
         <form>
           <div class="form-group">
-            <label for="paragraph">Password</label>
-            <textarea type="textarea" class="form-control" id="paragraph" placeholder="Paste here" rows=25 style="resize: none;"></textarea>
+            <textarea type="textarea" class="form-control" id="paragraph" placeholder="Paste your text here" rows=12></textarea>
           </div>
           <button type="submit" class="btn btn-default" id="text-submit">Submit</button>
         </form>
       </div>
-      <div class="col-sm-9">
+      <div class="col-md-8">
         <h2>Similiarities</h2>
-        <div id="chart" style="width:90%;height:500px;"></div>
+        <div id="chart"></div>
       </div>
     </div>
   </div> <!-- /container -->        
